--- a/ha-addon/config.json
+++ b/ha-addon/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Wmbusmeters krupaw",
-    "version": "0.1",
+    "version": "0.1.1",
     "slug": "wmbus",
     "description": "wmbus zasilany po ETH",
     "arch": ["armv7", "aarch64", "amd64"],
@@ -28,7 +28,8 @@
         "data_path": "/config/wmbusmeters",
         "enable_mqtt_discovery": false,
         "conf":
-            "loglevel=normal\ndevice=auto:t1\ndonotprobe=/dev/ttyAMA0\nlogtelegrams=false\nformat=json\nlogfile=/dev/stdout\nshell=/wmbusmeters/mosquitto_pub.sh wmbusmeters/$METER_NAME \"$METER_JSON\"",
+          #  "loglevel=normal\ndevice=auto:t1\ndonotprobe=/dev/ttyAMA0\nlogtelegrams=false\nformat=json\nlogfile=/dev/stdout\nshell=/wmbusmeters/mosquitto_pub.sh wmbusmeters/$METER_NAME \"$METER_JSON\"",
+            "loglevel=debug\ndevice=rtlwmbus:CMD(/usr/bin/nc -lk 8118)\ndonotprobe=/dev/ttyAMA0\nlogtelegrams=false\nformat=json\nlogfile=/dev/stdout\nshell=/wmbusmeters/mosquitto_pub.sh wmbusmeters/$METER_NAME \"$METER_JSON\"",
         "meters": [],
         "mqtt": {}
     },
