--- a/ha-addon/config.json
+++ b/ha-addon/config.json
@@ -28,7 +28,7 @@
         "data_path": "/config/wmbusmeters",
         "enable_mqtt_discovery": false,
         "conf":
-            "loglevel=debug\ndevice=rtlwmbus:CMD(/usr/bin/nc -lk 8118)\ndonotprobe=/dev/ttyAMA0\nlogtelegrams=false\nformat=json\nlogfile=/dev/stdout\nshell=/wmbusmeters/mosquitto_pub.sh wmbusmeters/$METER_NAME \"$METER_JSON\"",
+            "loglevel=debug\n\tdevice=rtlwmbus:CMD(/usr/bin/nc -lk 8118)\ndonotprobe=/dev/ttyAMA0\nlogtelegrams=false\nformat=json\nlogfile=/dev/stdout\nshell=/wmbusmeters/mosquitto_pub.sh wmbusmeters/$METER_NAME \"$METER_JSON\"",
         "meters": [],
         "mqtt": {}
     },
